src/objects/High_School__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>High Schools</relationshipLabel>
        <relationshipName>R00N40000001qFBVEA2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active_T_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active T/A?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constitution__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the chapter has submitted a constitution document.</inlineHelpText>
        <label>Constitution?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the chapter has held its first official meeting.</inlineHelpText>
        <label>First meeting?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSA_State__c</fullName>
        <formula>Account__r.JSA_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JSA State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifetime_Opportunity_Total__c</fullName>
        <formula>Account__r.Lifetime_Contributions_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Lifetime Opportunities - Other (non-dev) from the Account.</inlineHelpText>
        <label>Lifetime Opportunity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notification_Email__c</fullName>
        <inlineHelpText>Email address used for notifications regarding roster updates.  Should be that of the JSA Advisor or verified Chapter President.</inlineHelpText>
        <label>Notification Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Report_Password__c</fullName>
        <defaultValue>&quot;report&quot;</defaultValue>
        <inlineHelpText>Must be 15 characters or less. This field is not encrypted, as with portal passwords, so it can be changed via Salesforce.</inlineHelpText>
        <label>Report Password</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when the chapter leaders have received official school approval to form a chapter at the school.</inlineHelpText>
        <label>School Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_ID__c</fullName>
        <description>High School ID Number</description>
        <displayFormat>{00000}</displayFormat>
        <inlineHelpText>A five-digit ID number for the school, automatically assigned by Salesforce.</inlineHelpText>
        <label>School ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxes__c</fullName>
        <formula>Account__r.Taxes_Paid_This_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Running total of taxes paid this year. This field is updated only on the Account for the high school.</inlineHelpText>
        <label>Taxes Paid This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Urban_Target__c</fullName>
        <formula>IF(Account__r.Urban_Target__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Yes&quot; if school is Urban Target, otherwise &quot;No&quot;.  This value can only be changed on the Account for the High School.</inlineHelpText>
        <label>Urban Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_Chapter_President__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Chapter President?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <description>ZIP Code, based on Billing Postal Code of Account.</description>
        <formula>Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <formula>Account__r.Zone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>JSA Zone, from the Account for the High School.</inlineHelpText>
        <label>Zone</label>
        <type>Text</type>
    </fields>
    <label>High School</label>
    <nameField>
        <label>High School</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>High Schools</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>